refactor low-latency section